--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,22 @@
     <artifactId>maven-war-plugin</artifactId>
     <version>3.3.0</version>
     <configuration>
-        <goal>war:inplace</goal>
+    
         <outputDirectory>artifacts</outputDirectory>
     </configuration>
+    <executions>
+                        <execution>
+                            <id>default-war</id>
+                            <phase>none</phase>
+                        </execution>
+                        <execution>
+                            <id>war-inplace</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>inplace</goal>
+                            </goals>
+                        </execution>
+                    </executions>
 </plugin>
                 
             </plugins>
