--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-deploy:
-	provide: heroku
-	api_key: 
-		secure: SFMyNTY.g2gDbQAAAA8xNzguMjE0LjI1NS4yMDRuBgBKabW9eQFiAAFRgA.yMMSf9yPmDsAngiT4Dn8RQMuULYcBIBj5BR4oUaPxl0
-app: 
-	main: testwcalc23
 language: java
-skript:
-- mvn clean package
+before_script:
+  - echo "Starting build"
+script:
+  - mvn clean install
+after_script:
+  - echo "Build is ready"
+  - ls -l $TRAVIS_BUILD_DIR/target
+after_failure:
+  - echo "Build failure"
